tests/baselines/reference/declarationEmitMixinPrivateField1.errors.txt
another.ts(7,1): error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.
first.ts(7,1): error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.
first.ts(8,14): error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.


==== first.ts (2 errors) ====
    declare function mix<TMix>(mixin: TMix): TMix;
    
    const DisposableMixin = class {
        #onDispose() {}
    };
    
    export default mix(DisposableMixin);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.
    export class Monitor extends mix(DisposableMixin) {}
                 ~~~~~~~
!!! error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.
    
==== another.ts (1 errors) ====
    declare function mix<TMix>(mixin: TMix): TMix;
    
    const DisposableMixin = class {
        #onDispose() {}
    };
    
    export default class extends mix(DisposableMixin) {}
    ~~~~~~
!!! error TS4094: Property '#onDispose' of exported anonymous class type may not be private or protected.
    